[package]
name = "testcontainers-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio",
    "migrate",
] }
testcontainers = { version = "0.16" }
testcontainers-modules = { version = "0.4.0", features = ["postgres"] }
tokio = { version = "1.37.0", features = ["full"] }
